# web-projects

django-crud/: Makefile  README.md  pyproject.toml
django-crud/accounts/: urls.py  views.py
django-crud/accounts/templates/registration/: logged_out.html  login.html  register.html
django-crud/config/: settings.py  urls.py
flaskinho/: .gitignore  README.md  main.py  pyproject.toml
flaskinho-crud/: Makefile  README.md  main.py  models.py  pyproject.toml
flaskinho-crud/templates/: editar.html  home.html  register.html
flaskinho-login/: README.md  main.py  models.py  pyproject.toml
flaskinho-login/templates/: cadastro.html  home.html  login.html
flaskinho/instance/: dados.db
flaskinho/static/: style.css
flaskinho/templates/: base.html  calculadora.html  filtros.html  formulario.html  imagem.html  index.html  raspagem_numeros.html  testes.html
