[project]
name = "flaskinho-crud"
version = "0.1.0"
description = "using the CRUD operations with flask"
authors = [
    {name = "Pedro Henrique",email = "seu-email-no-pedrohenrisilva31@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-login (>=0.6.3,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
