[project]
name = "flaskinho-login"
version = "0.1.0"
description = "simple login system using flask framework"
authors = [
    {name = "Pedro Henrique",email = "seu-email-no-pedrohenrisilva31@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "werkzeug (>=3.1.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
