[project]

name = "flaskinho"
version = "0.1.0"
description = "basic structure using flask"
authors = [
    {name = "Pedro Henrique",email = "pedrohenrisilva31@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
